; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_genalloc.c_set_bits_ll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_genalloc.c_set_bits_ll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64)* @set_bits_ll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_bits_ll(i64* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64*, i64** %4, align 8
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %7, align 8
  br label %10

10:                                               ; preds = %21, %2
  %11 = load i64, i64* %7, align 8
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %5, align 8
  %14 = and i64 %12, %13
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %10
  %17 = load i32, i32* @EBUSY, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %31

19:                                               ; preds = %10
  %20 = call i32 (...) @cpu_relax()
  br label %21

21:                                               ; preds = %19
  %22 = load i64*, i64** %4, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %6, align 8
  %25 = load i64, i64* %5, align 8
  %26 = or i64 %24, %25
  %27 = call i64 @cmpxchg(i64* %22, i64 %23, i64 %26)
  store i64 %27, i64* %7, align 8
  %28 = load i64, i64* %6, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %10, label %30

30:                                               ; preds = %21
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %16
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @cpu_relax(...) #1

declare dso_local i64 @cmpxchg(i64*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
